--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "1.1.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vuetify": "^2.6.0",
-    "vue-router": "3.6.0"
+    "vue-router": "3.6.0",
+    "parse":"4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
