--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "axios": "1.1.2",
     "core-js": "^3.8.3",
+    "parse": "4.0.1",
     "vue": "^2.6.14",
-    "vuetify": "^2.6.0",
+    "vue-phone-number-input": "^1.12.13",
     "vue-router": "3.6.0",
-    "parse":"4.0.1"
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,9 +27,9 @@
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-simple-alert": "1.1.1",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0",    
-    "vue-simple-alert":"1.1.1"
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
