--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "parse": "4.0.1",
     "vue": "^2.6.14",
     "vue-phone-number-input": "^1.12.13",
+    "vue-recaptcha": "1.3.0",
     "vue-router": "3.6.0",
     "vuetify": "^2.6.0"
   },
