--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-simple-alert": "1.1.1",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "vue-loading-overlay":"3.4.3"
   },
   "eslintConfig": {
     "root": true,
