--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-phone-number-input": "^1.12.13",
     "vue-recaptcha": "1.3.0",
     "vue-router": "3.6.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "platform":"1.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
